--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@
     color: white ;
     font-size: 42px;
 }
+.background{
+    width: 100% ;
+    height: 100% ;
+}
 
 /*----------About-----------*/
 
